<resources>
    <string name="app_name">Life Cookie</string>
    <string name="Disconnection">Disconnection</string>
    <string name="send">Send</string>
    <string name="connect_to_watch">Connect To Watch</string>
    <string name="galaxy_watch3">Galaxy Watch3</string>
    <string name="ConnectionEstablishedMsg">Service Connection with Tizen has been established.</string>
    <string name="ConnectionTerminatedMsg">Service Connection with Tizen has been terminated.</string>
    <string name="ConnectionAlreadyExist">Service Connection has already been existed!!!</string>
    <string name="ConnectionAlreadyDisconnected">Service Connection has already been disconnected!!!</string>
    <string name="ConnectionFailure">Service Connection Failure</string>
    <string name="NoPeersFound">No peers have been found!!!</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="buttonSend">Send</string>
    <string name="enter_first_word">Enter first word</string>
    <string name="enter_second_word">Enter second word</string>
    <string name="submit">Submit</string>
    <string name="physiological_data">Physiological data</string>
    <string name="similarity">Similarity</string>
    <string name="title_activity_maps">Google Map Geolocation</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="googlemap">Google Map</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="username">User name</string>
    <string name="register">Register</string>
    <string name="gmail">Gmail</string>
    <string name="easy_wallet">Easy Wallet</string>
    <string name="Calendar">Calendar</string>
    <string name="Next">NEXT</string>
    <string name="like">LIKE</string>
    <string name="Dislike">DISLIKE</string>
    <string name="sneaker">sneaker</string>
    <string name="ME">ME</string>
    <string name="Analysis">Analysis</string>
    <string name="Data">Data</string>
    <string name="Gender">Gender :</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="Work">Occupation : </string>
    <string name="worker">Worker</string>
    <string name="student">student</string>
    <string name="Exercise">Average Exercising per day : </string>
    <string name="half_hour">Less than 30 minutes</string>
    <string name="above_half">30 ~ 60 minutes</string>
    <string name="hour">more than an hour</string>
    <string name="Sleep">Average Sleep Interval : </string>
    <string name="six_hours">Less than 6 hours</string>
    <string name="six_eight">6 ~ 8 hours</string>
    <string name="eight_hours">More than 8 hours</string>
    <string name="Sport">Preferred Type of Exercising : </string>
</resources>