<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/physiological_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mOnClickMain"
            android:text="@string/physiological_data"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/googlemap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mOnClickMain"
            android:text="@string/googlemap"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/easy_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mOnClickMain"
            android:text="@string/easy_wallet"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/similarity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mOnClickMain"
            android:text="@string/similarity"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
